# KASUMI

./: .gitignore  CITATION.cff  LICENSE  NOTICE  PUSH_INSTRUCTIONS.md  README.md  RELEASE_MANIFEST.json  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: checks.yml
artifacts/evidence/: automated_reviews_public.json  development_candidates.csv  development_guardrails.csv  development_selection_summary.json  development_tradeoff_points.csv  holdout_cells.csv  multiseed_holdout_summary.json  verification_summary.json
configs/: operator_budget_plan.template.json
docs/: E2E_REPRODUCTION.md  HERO_IMAGE_PROMPT.md  SOURCES.md  index.html
docs/artifacts/evidence/: development_selection_summary.json
integrations/ai_scientist_template/: README.md
integrations/shachi_extension/: README.md
scripts/: audit_public_release.py  check_pr_readiness.py  regenerate_public_figures.py  run_replay_pipeline.py
scripts/e2e/: _guard_provider_calls.sh  apply_overlays.sh  bootstrap_workspace.sh  prepare_packaged_idea.py  prepare_packaged_idea.sh  run_ai_scientist_development.sh  run_baseline.sh  run_domain_review.sh  run_final_paper.sh  run_full_e2e.sh  run_preflight_no_api.sh  run_selection_and_holdout.sh  shachi_run_japan_policy_behavioral_pilot.py  shachi_run_japan_policy_identity_gate.py  shachi_run_japan_policy_scientist.py
src/civic_policy_scientist/: __init__.py  evidence.py  pipeline.py  plotting.py  report.py  selection.py  verify.py
src/shachi/: __init__.py
tests/: test_e2e_public_surface.py  test_public_replay.py  test_template_contract_hashes.py
(+46 files in other folders)
