[project]
name = "public-service-policy-lab"
version = "0.1.0"
description = "Autonomous AI-scientist replay utilities for synthetic bureaucratic personnel policy research"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "KASUMI contributors"}]
dependencies = [
  "pydantic>=2",
  "matplotlib>=3.8",
  "pyyaml>=6",
  "networkx>=3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
